before slicing fix